# searchingfornues

./: .gitignore  .travis.yml  CMakeLists.txt  README  beam_off_list_run_subrun.txt  beam_on_list_run_subrun.txt  conf.doxy  generateDocumentationAndDeploy.sh
FlashMatching/: ACPTTrigFlashMatch_module.cc  CMakeLists.txt  CosmicRejection_module.cc  FlashMatchingToolBase_tool.h  FlashMatchingTool_tool.cc  MuCSFlashMatch_module.cc  SliceCandidate.h  WireCellNuHitsProducer_module.cc  flashmatchsetup.fcl  run_acpttrig_data.fcl  run_cosmicrejection.fcl  run_mucschi2.fcl  run_mucsflashmatch.fcl
FlashMatching/job/: local_flash_neutrino_id.fcl
Selection/: CMakeLists.txt  NeutrinoSelectionFilter_module.cc  NeutrinoSelection_module.cc  neutrinoselection.fcl  run_crtNuSelection.fcl  run_neutrinoselection.fcl  run_neutrinoselectionfilter.fcl  run_neutrinoselectionfilter_run1_data.fcl  run_neutrinoselectionfilter_run1_mc.fcl  run_neutrinoselectionfilter_run3_dataOFF.fcl  run_neutrinoselectionfilter_run3_offbeam.fcl  run_neutrinoselectionfilter_run3_onbeam.fcl
Selection/AnalysisTools/: ._TrackAnalysis_tool.cc  AnalysisToolBase.h  BDT_tool.cc  BlipAnalysis_tool.cc  CMakeLists.txt  CRTApproachAnalysis_tool.cc  CalorimetryAnalysis_tool.cc  ContainmentAnalysis_tool.cc  CosmicIP_tool.cc  DefaultAnalysis_tool.cc  EventFilter_tool.cc  EventWeightTree_tool.cc  FlashMatching_tool.cc  MCFilter_tool.cc  MCS_tool.cc  NeutrinoEnergy_tool.cc  NeutrinoTiming_tool.cc  NeutronAnalysis_tool.cc  ObviousCosmicFlashMatching_tool.cc  PMTNoise_tool.cc  PMTWaveform_tool.cc  Pi0Tagger_tool.cc  Pi0TruthAnalysis_tool.cc  SecondShowerTagger_tool.cc  ShowerAnalysis_tool.cc  ShowerStartPoint_tool.cc  SimPhoton_tool.cc  SlicePurCompl_tool.cc  TrackAnalysis_tool.cc  TrackPIDAnalysis_tool.cc  VertexAnalysis_tool.cc
Selection/CommonDefs/: BacktrackingFuncs.h  CalibrationFuncs.h  Containment.h  Descendents.h  Geometry.h  LLRPID_correction_lookup.h  LLRPID_electron_photon_lookup.h  LLRPID_proton_muon_lookup.h  LLRPID_recalibration.h  LLR_PID.h  PFPHitDistance.h  PIDFuncs.h  ParticleSegments.h  ProximityClustering.h  SCECorrections.h  Scatters.h  ShowerBranchTagger.h  TrackFitterFunctions.h  TrackShowerScoreFuncs.h  Typedefs.h
Selection/SelectionTools/: ._CC0piNpSelection_tool.cc  CC0piNpSelection_tool.cc  CCincSelection.cc  CCincSelection_tool.cc  CCincSelection_tool.h  CMakeLists.txt  CRTApproachSelection_tool.cc  ContainmentSelecton_tool.cc  EmptySelection_tool.cc  NuMuSelection_tool.cc  Pi0Selection_tool.cc  SelectionExample_tool.cc  SelectionToolBase.h  ShowerSelection_tool.cc
Selection/data/: booster.model  booster_cc.model  booster_ccpi0.model  booster_cosmic.model  booster_ext.model  booster_ncpi0.model  booster_nopid.model  booster_nopid_cc.model  booster_nopid_ccpi0.model  booster_nopid_cosmic.model  booster_nopid_ext.model  booster_nopid_ncpi0.model  cosmic_background.model  ext_background.model  global.model  nu_NCpi0_background.model  numu_CC_background.model  numu_CCpi0_background.model
Selection/job/: #neutrinoselection.fcl#  CMakeLists.txt  calorimetryanalysis.fcl  crtveto.fcl  eventweight.fcl  eventweight_microboone.fcl  eventweight_microboone_dec20.fcl  eventweight_microboone_genie_dec20.fcl  eventweight_microboone_genie_dec20_nouniverses.fcl  eventweight_microboone_genie_genieall.fcl  eventweight_microboone_genie_knobs.fcl  eventweight_microboone_genie_single_knobs.fcl  eventweight_microboone_genie_single_knobs_multiverse.fcl  microboone_antibdt_filter.fcl  neutrinoselection.fcl  neutrinoselection_numi.fcl  run_acptcalo_data.fcl  run_acptcalo_overlay.fcl  run_calorimetryanalysis_run1_data.fcl  run_calorimetryanalysis_run1_mc.fcl  run_calorimetryanalysis_run1_overlay.fcl  run_calorimetryanalysis_shower_run1_overlay.fcl  run_neutrinoselectionfilter_run1_acptcalo_data.fcl  run_neutrinoselectionfilter_run1_acptcalo_mc.fcl  run_neutrinoselectionfilter_run1_common.fcl  run_neutrinoselectionfilter_run1_data.fcl  run_neutrinoselectionfilter_run1_data_cc0pinp.fcl  run_neutrinoselectionfilter_run1_data_mcreco.fcl  run_neutrinoselectionfilter_run1_data_neutron_blip_tools.fcl  run_neutrinoselectionfilter_run1_data_numu.fcl  run_neutrinoselectionfilter_run1_dirt_cc0pinp.fcl  run_neutrinoselectionfilter_run1_fakedata_cc0pinp.fcl  run_neutrinoselectionfilter_run1_mc.fcl  run_neutrinoselectionfilter_run1_mc_cc0pinp.fcl  run_neutrinoselectionfilter_run1_mc_ccinc.fcl  run_neutrinoselectionfilter_run1_mc_nues.fcl  run_neutrinoselectionfilter_run1_mc_numu.fcl  run_neutrinoselectionfilter_run1_mc_shrreco3d.fcl  run_neutrinoselectionfilter_run1_nuwro_overlay_cc0pinp.fcl  run_neutrinoselectionfilter_run1_overlay.fcl  (+44 more)
Selection/job/light/: run_neutrinoselectionfilter_run1_data_pmtwf.fcl  run_neutrinoselectionfilter_run1_overlay_pmtwf.fcl  run_neutrinoselectionfilter_run1_singleparticle_cc0pinp.fcl  run_neutrinoselectionfilter_run3_dataOFF_pmtwf.fcl  run_neutrinoselectionfilter_run3_dataON_pmtwf.fcl  run_neutrinoselectionfilter_run3_overlay_pmtwf.fcl
Selection/job/numi/: dump.txt  dump_dirt.txt  eventweight_microboone_dec20_numi.fcl  eventweight_microboone_mar18_numi.fcl  eventweight_microboone_mar18_numi_dirt.fcl  ppfx_numi_reweight_pelee.fcl  ppfx_numi_reweight_pelee_mar18.fcl  reco_uboone_mcc9_8_driver_data_ext_numi_optical_updated.fcl  reco_uboone_mcc9_8_driver_data_numi_optical_updated.fcl  reco_uboone_mcc9_8_driver_overlay_numi_optical_updated.fcl  run_neutrinoselectionfilter_run1_nuwro_cc0pinp_numi.fcl  run_neutrinoselectionfilter_run1_overlay_cc0pinp_numi.fcl  run_neutrinoselectionfilter_run1_overlay_cc0pinp_numi_dirt.fcl  run_neutrinoselectionfilter_run1_overlay_numi.fcl  run_neutrinoselectionfilter_run3_nuwro_cc0pinp_numi.fcl  run_neutrinoselectionfilter_run3_overlay_cc0pinp_numi.fcl  run_neutrinoselectionfilter_run3_overlay_cc0pinp_numi_dirt.fcl  run_neutrinoselectionfilter_run4_nuwro_cc0pinp_numi.fcl  run_neutrinoselectionfilter_run4_overlay_cc0pinp_numi.fcl  run_neutrinoselectionfilter_wiremod_run1_overlay_cc0pinp_numi.fcl  run_neutrinoselectionfilter_wiremod_run3_overlay_cc0pinp_numi.fcl  (+3 more)
html/: annotated.html  (+200 more)
(+261 files in other folders)
